--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section class="active" id="start-screen">
-            <a><span class="high-scores">View High Scores</span></a>
+            <button id="high-scores">View High Scores</button>
             <h2>Quiz Challenge</h2>
             <p>
                 Try to answer the following questions within the time limit.<br />
@@ -41,7 +41,6 @@
         </section>
         <section class="hidden" id="quiz-screen">
             <section id="timebox">
-                <a><span class="high-scores">View High Scores</span></a>
                 <div id="answer-message"></div>
                 <div><span id="time-left"></span> seconds remaining</div>
             </section>
@@ -58,18 +57,18 @@
         </section>
         <section class="hidden" id="end-screen">
             <h2>All done!</h2>
-            <p>Your final score is <span></span>.</p>
+            <p>Your final score is <span id="final-score"></span>.</p>
             <form id="scores-form">
-                <label for="initials-submit">Enter initials: </label><input type="text" id="initials-input" />
+                <label for="initials-submit">Enter initials: </label><input type="text" id="initials-input" maxlength="3" />
                 <button id="submit-btn">Submit</button>
             </form>
-            <ul class="scores-list"></ul>
         </section>
         <section class="hidden" id="scores-screen">
-            <button id="prevPage">Go back</button>
+            <button id="back-btn">Go back</button>
             <button id="reset-score">Reset Scores</button>
             <div id="scores">
-                <ul class="scores-list"></ul>
+                <h2>High Scores</h2>
+                <ol id="scores-list"></ol>
             </div>
         </section>
     </main>
